# BuildEmbSys

./: .gitattributes  .gitignore  .gitmodules  BuildSimulatiion.files  BuildSimulatiion.includes  SimulationBuilder.files
EmbEngineSys/craft/: EventSystem.cpp  InputSystem.cpp
EmbEngineSys/craft/h_libs/logger_2_1/: Logger.h
EmbEngineSys/craft/logger_2_1/: .app_log.log.swp  Logger.cpp  logger_app  main.cpp
EmbEngineSys/craft/logger_2_1/loger1/: LogErrorBASIC.cpp
EmbEngineSys/craft/logger_2_1/loger1_1/: LogError.cpp  explain.cpp
Engines/: CMakeLists.txt  CMakePresets.json.bk  README.md
Engines/ClientProject/: CMakeLists.txt
Engines/ClientProject/source/: ViRobot.cpp
Engines/Engine/: CMakeLists.txt
Engines/Engine/ViSolEngine/: pch.cpp  pch.h
Engines/Engine/ViSolEngine/core/: application.cpp  application.h  entry.h
Engines/Engine/ViSolEngine/core/event/: eventAction.h  eventContext.h  eventDispatcher.cpp  eventDispatcher.h
Engines/Engine/ViSolEngine/core/input/: GLFW_input.cpp  inputState.h  keyCode.h
Engines/Engine/ViSolEngine/core/logger/: logger.cpp  logger.h
Engines/Engine/ViSolEngine/window/: GLFWPlatformWindow.cpp  window.h  windowPlatform.cpp  windowPlatform.h
Engines/Engine/cmake/: ViSolEngineConfig.cmake.in
Engines/Vendors/glad/include/glad/: gl.h
Engines/Vendors/glad/src/glad/: gl.c
Engines/Vendors/x86_64_u20/glad/: CMakeLists.txt
Engines/Vendors/x86_64_u20/include/glad/: gl.h
Engines/tools/docker/: Pkg_requirement.txt
Engines/tools/script/: build_all.sh  build_and_run.sh  build_run_clean.sh  clean_all.sh  lib.sh  run.sh  setup_env.sh
MathSim/ginacSiml_makeTempl/: README.md  ginac_ex.cpp
MathSim/simpy_math_convert/: simplify_expr.py
MotorSim/: CMakeLists.txt
MotorSim/include/: motorsimulation.h
MotorSim/src/: main.cpp  motorsimulation.cpp
MotorSim2/src/: motorsimulation.cpp
MotorSim3/include/: motorsimulation.h
MotorSim3/src/: main.cpp
Prepare_N_Testing/MathSim/simpy_math_convert/: call_python.cpp
Prepare_N_Testing/MathSim/wolfram_api_math_convert/: wolfram_api_example.cpp
Prepare_N_Testing/MotorSim/src/: motorsimulation.cpp
Prepare_N_Testing/stuDroneCppMath/src/: positionControl.cpp
Prepare_N_Testing/stuPID_autotune/src/: main.cpp
arduComplexPrj/Drone/src/: fly_run
docker/full/: DockerF1  DockerF2  entrypoint.sh
engine_craft/apps/: CMakeLists.txt
engine_craft/apps/camera_viewer/: camera_config.json  ui_layout.xml
engine_craft/apps/test_graphics/: scene_config.json
engine_craft/config/: default_config.json  platform_esp32.json  platform_linux.json
engine_craft/core/base/: logger.cpp  macros.h
engine_craft/core/net/: tcp_client.cpp
engine_craft/core/system/: task_scheduler.cpp
engine_craft/core/vielog/: CMakeLists.txt
engine_craft/core/vielog/include/vielog/: vielog.h
engine_craft/core/vielog/src/: vielog.cpp
engine_craft/docs/: build_guide.md
engine_craft/init_prj/: cleanup_extra_cmake.sh
engine_craft/init_prj/backup_cmake/: ?home?devh?Documents?engine_pj?init_prj?..?tools?CMakeLists.txt
engine_craft/modules/: CMakeLists.txt
engine_craft/modules/ai_ext/: onnx_runtime_wrapper.cpp
engine_craft/modules/camera/: camera_factory.cpp
engine_craft/modules/embedded/: i2c_driver.cpp  uart.cpp
engine_craft/modules/game/: ecs_system.cpp
engine_craft/modules/graphics/: mesh.cpp
engine_craft/platform/android/: ndk_interface.cpp  platform_init.cpp
engine_craft/scripts/: deploy_to_board.sh  setup_env.py
engine_craft/testing/: test_event.cpp  test_game.cpp  test_math.cpp
engine_craft/testing/header_structure/: CMakeLists.txt
engine_craft/tools/: asset_converter.py  dump_config.py  profiling_tool.cpp
engine_pj/: .gitignore  build_file_structure.py
engine_pj/core/ai/: base_model.h  model_registry.cpp  utils.hpp
engine_pj/core/base/: types.h
engine_pj/core/math/: matrix.h  quaternion.h  vector.h
engine_pj/core/net/: http_server.cpp  socket.h
engine_pj/core/system/: memory_manager.cpp
engine_pj/docs/: architecture.md  build_guide.md  module_overview.md
engine_pj/init_prj/: lib.sh
engine_pj/init_prj/backup_cmake/: ?home?devh?Documents?engine_pj?init_prj?..?CMakeLists.txt  ?home?devh?Documents?engine_pj?init_prj?..?apps?test_graphics?CMakeLists.txt  ?home?devh?Documents?engine_pj?init_prj?..?core?CMakeLists.txt  ?home?devh?Documents?engine_pj?init_prj?..?modules?graphics?CMakeLists.txt  ?home?devh?Documents?engine_pj?init_prj?..?platform?linux?CMakeLists.txt  ?home?devh?Documents?engine_pj?init_prj?..?testing?CMakeLists.txt  ?home?devh?Documents?engine_pj?init_prj?..?third_party?CMakeLists.txt
engine_pj/modules/ai_ext/: inference_runner.cpp  vision_utils.cpp
engine_pj/modules/camera/: camera_device.cpp  capture_manager.cpp
engine_pj/modules/embedded/: gpio.cpp
engine_pj/modules/game/: physics_engine.cpp  scene_manager.cpp
engine_pj/modules/graphics/: renderer.cpp  shader_loader.cpp
engine_pj/platform/: CMakeLists.txt
engine_pj/platform/esp32/: esp_platform.c  gpio_driver.c
engine_pj/platform/linux/: linux_file.cpp
engine_pj/platform/windows/: win_file.cpp
engine_pj/scripts/: build.sh
engine_pj/testing/: test_camera.cpp
engine_pj/testing/header_structure/: result.md
engine_pj/testing/header_structure/modules/camera/: CMakeLists.txt
engine_pj/testing/header_structure/modules/camera/private_include/: camera_utils.h
engine_pj/testing/header_structure/modules/camera/src/: camera_device.cpp
engine_pj/testing/t_vielog/: CMakeLists.txt
sample_v1/MathSim/: README.md
sample_v1/Prepare_N_Testing/MotorSim3/: CMakeLists.txt
sample_v1/Prepare_N_Testing/stuDroneCppMath/: CMakeLists.txt
sample_v1/docker/X11_U22/: README.md
sample_v1/docker/full/: README.md
stuDroneCppMath/: monitor.txt
stuDroneCppMath/src/: main.cpp
stuPID_autotune/: CMakeLists.txt
stuPID_autotune/docode/: codetypeArduino.cpp
stuPID_autotune/inc/: mockmpu6050.h  mockmpu6050.h.autosave  mockwire.h  mockwire.h.autosave  pid_autotune.h
stuPID_autotune/src/: mockmpu6050.cpp  mockwire.cpp
tools/script/SetupCMakePrj/: create_project.sh  templCmakeAll.txt
(+24 files in other folders)
